syntax = "proto3";
package identity;

import "gogoproto/gogo.proto";
import "modules/identities/internal/mappable/mappable.v1.proto";

message QueryResponse {
  option (gogoproto.goproto_getters) = false;
  bool success = 1;
  string error = 2;
  repeated identities.Mappable list = 3;
}