syntax = "proto3";
package test;

import "gogoproto/gogo.proto";
message TestQueryResponse {
  option (gogoproto.goproto_getters) = false;

  bool success = 1;
  string error = 2;
}